--- a/changelog.txt
+++ b/changelog.txt
@@ -18,6 +18,7 @@
 [*] [color=red]Nouveauté:[/color] Générateur automatique de tableau avec gestion de la pagination, filtres, tris.
 [*] [color=red]Nouveauté:[/color] Installation possible en ligne de commande.
 [*] [color=red]Nouveauté:[/color] Système de cache CSS.
+[*] [color=red]Nouveauté:[/color] Création de diverses classes permettant le partage et la publication d'informations sur les réseaux sociaux.
 [*] Utilitaire en ligne de commande permettant l'installation de PHPBoost.
 [*] Nouveau gestionnaire d'erreur et d'exception.
 [*] Création d'une classe de débug pour les développeurs.
@@ -44,7 +45,7 @@
 [b]Personnalisation graphique :[/b]
 - [color=red]Nouveauté:[/color] Interface de personnalisation graphique du site, modification du titre/sous-titre, logo et couleurs du site.
 - [color=red]Nouveauté:[/color] Interface de personnalisation de la page de démarrage du site.
-- [color=red]Nouveauté:[/color] Possibilité de masquer indépendamment tous les conteneurs suivant les thèmes.
+[*] [color=red]Nouveauté:[/color] Possibilité de masquer indépendamment tous les conteneurs suivant les thèmes.
 - [color=red]Nouveauté:[/color] Nouveau thème pour la distribution complete.
 [*] Possibilité de cacher/ouvrir dans la liste des modules, la description et les autorisations de lecture pour une meilleure lisibilité
 [*] Amélioration de l'interface de gestion des thèmes.
