--- a/todo.txt
+++ b/todo.txt
@@ -20,11 +20,9 @@
 ------------------------------------- NOYAU ------------------------------------
 + Classe commentaire : Gérer les autorisations, gérer la notation +1 et -1, gérer l'affichage des commentaires, possibilité d'avoir une alerte lors d'un nouveau commentaire.
 - Balises Youtube, Dailymotion
-- Création de contrainte pour vérifier si un pseudo ou un email est déjà utilisé (utiliser Field::set_validation_error_message())
-- Créer des champs spécifiques aux sanctions à ajouter dans l'édit d'un membre dans l'administration.
+- Ajout des contraintes dans les formulaires d'enregistrement, d'édition, et ajout d'un membre pour voir si un mail ou login est déjà présent.
 - Corriger bbcode.css (bloc masquables + wikipédia) (publishing notamment)
-- Personnalisation du logo et du favicon : ajouter les modifications dans les templates
-- Utilisation des futures classes de Loic pour gérer l'inscription d'un membre (seulement si on intègre le nouveaux sytème de sessions)
+- Personnalisation du logo : ajouter les modifications dans les templates
 
 ------------------------------------ MODULES -----------------------------------
 
@@ -39,11 +37,10 @@
 #################################################################################
 
 ------------------------------------- NOYAU ------------------------------------
-- Création d'un controlleur pour l'oubli du mot de passe.
-- Terminer la config du site (envoi du code de vérification, ..)
 - Gérer la nouvelle fonction d'ugrade d'un module (ModuleManager::upgrade($id_module))
 
 ------------------------------------ MODULES -----------------------------------
+- 
 
 #################################################################################
 
