--- a/changelog.txt
+++ b/changelog.txt
@@ -4,120 +4,123 @@
 
 ===================================== Noyau ======================================
 [b]Framework :[/b]
-[*] [color=red]NouveautÃ© :[/color] Passage Ã  PHP5 de l'ensemble du framework.
-[*] [color=red]NouveautÃ© :[/color] Nouveau framework MVC.
-[*] [color=red]NouveautÃ© :[/color] RÃ©organisation des packages du framework.
-[*] [color=red]NouveautÃ©:[/color] Regroupement de toutes les notions du noyau dans une classe Environment de faÃ§on Ã  rendre le code considÃ©rablement plus maintenable.
-[*] [color=red]NouveautÃ© :[/color] CrÃ©ation d'un chargeur automatique de classe.
-[*] [color=red]NouveautÃ© :[/color] Refonte complÃ¨te de la gestion des requÃªtes Ã  la bases de donnÃ©es.
-[*] [color=red]NouveautÃ© :[/color] Refonte du moteur de templates, possibilitÃ© de gÃ©rer les templates sous forme de chaine de caractÃ¨res.
-[*] [color=red]NouveautÃ©:[/color] Refonte complÃ¨te du gestionnaire de cache, possibilitÃ© de stockage directement en mÃ©moire pour des performances grandement amÃ©liorÃ©es.
-[*] [color=red]NouveautÃ©:[/color] CrÃ©ation d'un gestionnaire de configuration, stockant de faÃ§on autonome les donnÃ©es et s'appuyant sur le gestionnaire de cache pour le rendre plus performant.
-[*] [color=red]NouveautÃ©:[/color] CrÃ©ation d'un chargeur de langue permettant une gestion plus aisÃ©e des langues.
-[*] [color=red]NouveautÃ©:[/color] GÃ©nÃ©rateur automatique de formulaire avec contrÃ´le client et serveur automatisÃ©s.
-[*] [color=red]NouveautÃ©:[/color] GÃ©nÃ©rateur automatique de tableau avec gestion de la pagination, filtres, tris.
-[*] [color=red]NouveautÃ©:[/color] Installation possible en ligne de commande.
-[*] [color=red]NouveautÃ©:[/color] SystÃ¨me de cache CSS.
-[*] [color=red]NouveautÃ©:[/color] CrÃ©ation de diverses classes permettant le partage et la publication d'informations sur les rÃ©seaux sociaux.
+[*] [color=red]Nouveauté :[/color] Passage à PHP5 de l'ensemble du framework.
+[*] [color=red]Nouveauté :[/color] Nouveau framework MVC.
+[*] [color=red]Nouveauté :[/color] Réorganisation des packages du framework.
+[*] [color=red]Nouveauté :[/color] Regroupement de toutes les notions du noyau dans une classe Environment de façon à rendre le code considérablement plus maintenable.
+[*] [color=red]Nouveauté :[/color] Création d'un chargeur automatique de classe.
+[*] [color=red]Nouveauté :[/color] Refonte complète de la gestion des requêtes à la bases de données.
+[*] [color=red]Nouveauté :[/color] Refonte du moteur de templates, possibilité de gérer les templates sous forme de chaine de caractères.
+[*] [color=red]Nouveauté :[/color] Refonte complète du gestionnaire de cache, possibilité de stockage directement en mémoire pour des performances grandement améliorées.
+[*] [color=red]Nouveauté :[/color] Création d'un gestionnaire de configuration, stockant de façon autonome les données et s'appuyant sur le gestionnaire de cache pour le rendre plus performant.
+[*] [color=red]Nouveauté :[/color] Création d'un chargeur de langue permettant une gestion plus aisée des langues.
+[*] [color=red]Nouveauté :[/color] Générateur automatique de formulaire avec contrôle client et serveur automatisés.
+[*] [color=red]Nouveauté :[/color] Générateur automatique de tableau avec gestion de la pagination, filtres, tris.
+[*] [color=red]Nouveauté :[/color] Installation possible en ligne de commande.
+[*] [color=red]Nouveauté :[/color] Système de cache CSS.
+[*] [color=red]Nouveauté :[/color] Création de diverses classes permettant le partage et la publication d'informations sur les réseaux sociaux.
 [*] Utilitaire en ligne de commande permettant l'installation de PHPBoost.
 [*] Nouveau gestionnaire d'erreur et d'exception.
-[*] CrÃ©ation d'une classe de dÃ©bug pour les dÃ©veloppeurs.
-[*] Refonte du systÃ¨me de communication entres les modules et le noyau.
-[*] Nouvelles classes de gestion des requÃªtes et rÃ©ponses HTTP.
-[*] Gestion des cookies Ã  travers les classes HTTP.
-? AmÃ©lioration de la gÃ©nÃ©ration du formulaire d'autorisation.
-[*] AmÃ©lioration de la rÃ©cupÃ©ration des erreurs.
-[*] RÃ©cupÃ©ration du chemin complet du fichier dans les logs d'erreurs.
+[*] Création d'une classe de débug pour les développeurs.
+[*] Refonte du système de communication entres les modules et le noyau.
+[*] Nouvelles classes de gestion des requêtes et réponses HTTP.
+[*] Gestion des cookies à travers les classes HTTP.
+[*] Amélioration de la récupération des erreurs.
+[*] Récupération du chemin complet du fichier dans les logs d'erreurs.
 [*] Ajout de la balise [feed] permettant d'inclure un flux RSS dans une mise en page
-[*] Nouveau systÃ¨me de champs membres permettant Ã©galement Ã  un dÃ©veloppeur de crÃ©er son propre champ personnalisÃ© Ã  partir d'un module.
-[*] Nouveau systÃ¨me de changement de mot de passe en cas d'oubli.
-+ Refonte de la classe session (PossibilitÃ© de joindre les sessions et l'espace membre Ã  des systÃ¨mes d'authentification externes).
-[*] Refonte du systÃ¨me de notation : suppression des champs BDD sur tous les modules, systÃ¨me autonome.
-+ Refonte du systÃ¨me de commentaire : Refonte graphique, gestion de la pagination en AJAX, possibilitÃ© de noter un commentaire (+1 ou -1).
-[*] Refonte de la gestion des thÃ¨mes.
+[*] Nouveau système de champs membres permettant également à un développeur de créer son propre champ personnalisé à partir d'un module.
+[*] Nouveau système de changement de mot de passe en cas d'oubli.
++ Refonte de la classe session (Possibilité de joindre les sessions et l'espace membre à des systèmes d'authentification externes).
+[*] Refonte du système de notation : suppression des champs BDD sur tous les modules, système autonome.
+[*] Refonte du système de commentaire : 
+	- Refonte graphique
+	- Gestion de la pagination en AJAX
+	- Possibilité de noter un commentaire (+1 ou -1)
+	- Possibilité d'approuver les commentaires avant publication par un administration ou un modérateur.
+	- Ajout d'autorisations de lecture, de modération, d'ajout et de notation.
+[*] Refonte de la gestion des thèmes.
 [*] Refonte de la section membre.
-[*] Ajout de classes permettant d'avoir le suivi d'un ou de plusieurs membres (derniers commentaires, articles postÃ©s, etc).
-[*] PossibilitÃ© de personnaliser son logo par thÃ¨me et le favicon du site.
-+ AmÃ©lioration de la fonction d'upgrade d'un module.
++ Amélioration de la fonction d'upgrade d'un module.
 
 [b]Menus :[/b]
-[*] [color=red]NouveautÃ© :[/color] Nouveau systÃ¨me de gestion des menus en drag'n drop.
-[*] [color=red]NouveautÃ©:[/color] PossibilitÃ© d'afficher/masquer un menu sur un module ou une page donnÃ©e Ã  l'aide de filtres.
-- [color=red]NouveautÃ©:[/color] Gestion des menus avec arborescence repliable
-- PossibilitÃ© de dÃ©sactiver l'affichage d'un lien dans les menus
+[*] [color=red]Nouveauté :[/color] Nouveau système de gestion des menus en drag'n drop.
+[*] [color=red]Nouveauté:[/color] Possibilité d'afficher/masquer un menu sur un module ou une page donnée à l'aide de filtres.
+- [color=red]Nouveauté:[/color] Gestion des menus avec arborescence repliable
+- Possibilité de désactiver l'affichage d'un lien dans les menus
 
 [b]Personnalisation graphique :[/b]
-- [color=red]NouveautÃ©:[/color] Interface de personnalisation de la page de dÃ©marrage du site.
-[*] [color=red]NouveautÃ©:[/color] PossibilitÃ© de masquer indÃ©pendamment tous les conteneurs suivant les thÃ¨mes.
-- [color=red]NouveautÃ©:[/color] Nouveau thÃ¨me pour la distribution complete.
-[*] PossibilitÃ© de cacher/ouvrir dans la liste des modules, la description et les autorisations de lecture pour une meilleure lisibilitÃ©
-[*] AmÃ©lioration de l'interface de gestion des thÃ¨mes.
-[*] PossibilitÃ© de mettre plusieurs images de visualisation des thÃ¨mes avec effet LightBox.
+- [color=red]Nouveauté:[/color] Interface de personnalisation de la page de démarrage du site.
+[*] [color=red]Nouveauté:[/color] Possibilité de masquer indépendamment tous les conteneurs suivant les thèmes.
+- [color=red]Nouveauté:[/color] Nouveau thème pour la distribution complete.
+[*] Possibilité de cacher/ouvrir dans la liste des modules, la description et les autorisations de lecture pour une meilleure lisibilité
+[*] Amélioration de l'interface de gestion des thèmes.
+[*] Possibilité de personnaliser son logo par thème et le favicon du site.
+[*] Possibilité de mettre plusieurs images de visualisation des thèmes avec effet LightBox.
 
 [b]Divers :[/b]
-[*] [color=red]NouveautÃ©:[/color] PossibilitÃ© d'utiliser un serveur smtp pour l'envoi de mails.
-- [color=red]NouveautÃ©:[/color] SystÃ¨me d'alertes (javascript) utilisateur Ã©voluÃ©.
-[*] PossibilitÃ© de spÃ©cifier le niveau d'accÃ¨s pour voir la liste des membres.
-[*] Redimensionnement automatisÃ© des avatars s'ils dÃ©passent les dimensions maximales autorisÃ©es.
-[*] Meilleur dÃ©tection des robots d'indexation, ajout de la prise en compte de Bing.
-[*] Ajout d'un dÃ©filement vertical dans l'administration pour la visualisation de la liste des utilisateurs connectÃ©es.
-[*] Ajout d'un bloc note Ã  l'accueil de l'administration.
-[*] PossibilitÃ© de trier les membres par date de derniÃ¨re connexion dans l'administration.
-[*] Ajout de l'attribut style Ã  la balise image de faÃ§on Ã  pouvoir fixer des propriÃ©tÃ©s comme largeur, hauteur et bordure.
-[*] Nouveau systÃ¨me de champs membres : Les champs peuvent Ãªtre dÃ©sactivÃ©, modifier et l'ajout de type de champs supplÃ©mentaires ont Ã©tÃ© ajoutÃ©s.
-[*] PossibilitÃ© de gÃ©rer finement les autorisations des thÃ¨mes.
-[*] PossibilitÃ© de gÃ©rer finement les autorisations des commentaires.
-[*] PossibilitÃ© de gÃ©rer finement les autorisations de l'interface de fichier.
-[*] PossibilitÃ© de gÃ©rer finement les autorisations d'accÃ¨s au site quand il est en maintenance.
+[*] [color=red]Nouveauté:[/color] Possibilité d'utiliser un serveur smtp pour l'envoi de mails.
+- [color=red]Nouveauté:[/color] Système d'alertes (javascript) utilisateur évolué.
+[*] Possibilité de spécifier le niveau d'accès pour voir la liste des membres.
+[*] Redimensionnement automatisé des avatars s'ils dépassent les dimensions maximales autorisées.
+[*] Meilleur détection des robots d'indexation, ajout de la prise en compte de Bing.
+[*] Ajout d'un défilement vertical dans l'administration pour la visualisation de la liste des utilisateurs connectées.
+[*] Ajout d'un bloc note à l'accueil de l'administration.
+[*] Possibilité de trier les membres par date de dernière connexion dans l'administration.
+[*] Ajout de l'attribut style à la balise image de façon à pouvoir fixer des propriétés comme largeur, hauteur et bordure.
+[*] Nouveau système de champs membres : Les champs peuvent être désactivé, modifier et l'ajout de type de champs supplémentaires ont été ajoutés.
+[*] Possibilité de gérer finement les autorisations des thèmes.
+[*] Possibilité de gérer finement les autorisations des commentaires.
+[*] Possibilité de gérer finement les autorisations de l'interface de fichier.
+[*] Possibilité de gérer finement les autorisations d'accès au site quand il est en maintenance.
 
 =================================== Modules =====================================
 [b]BugTracker :[/b]
-- [color=red]NouveautÃ©:[/color] Nouveau module de gestion des bugs.
+- [color=red]Nouveauté:[/color] Nouveau module de gestion des bugs.
 
 [b]Galerie :[/b]
-- Voir les images plus vues/mieux notÃ©es, affichage sur l'ensemble de la galerie et non sur une catÃ©gorie.
-- PossibilitÃ© de tÃ©lÃ©charger l'image.
-[*] Tri des images conservÃ© dans la pagination.
+- Voir les images plus vues/mieux notées, affichage sur l'ensemble de la galerie et non sur une catégorie.
+- Possibilité de télécharger l'image.
+[*] Tri des images conservé dans la pagination.
 [*] Gestion des flux RSS et Atom
 
 [b]News :[/b]
-[*] Refonte complÃ¨te du module, collaboration des utilisateurs possible.
+[*] Refonte complète du module, collaboration des utilisateurs possible.
 
 [b]Articles :[/b]
-- Refonte complÃ¨te du module, collaboration des utilisateurs possible.
+- Refonte complète du module, collaboration des utilisateurs possible.
 
 [b]ShoutBox :[/b]
-[*] PossibilitÃ© de gÃ©rer les autorisations d'Ã©criture, de lecture et de modÃ©ration
+[*] Possibilité de gérer les autorisations d'écriture, de lecture et de modération
 
 [b]Livre d'or :[/b]
-[*] PossibilitÃ© de gÃ©rer les autorisations d'Ã©criture, de lecture et de modÃ©ration (Ã©dition et suppression).
+[*] Possibilité de gérer les autorisations d'écriture, de lecture et de modération (édition et suppression).
 
 [b]Pages :[/b]
-[*] PossibilitÃ© de cacher le lien d'impression pour chacune des pages.
+[*] Possibilité de cacher le lien d'impression pour chacune des pages.
 [*] Gestion des flux RSS et Atom
 
 [b]Calendrier :[/b]
-[*] PossibilitÃ© de gÃ©rer les autorisations d'Ã©criture, de lecture et de modÃ©ration (Ã©dition et suppression).
+[*] Possibilité de gérer les autorisations d'écriture, de lecture et de modération (édition et suppression).
 
 [b]Forum[/b]
-[*] Suppression d'un sondage impossible
+[*] Suppression d'un sondage maintenant possible
 
-[b]TÃ©lÃ©chargement[/b]
-[*] PossibilitÃ© de signaler les liens cassÃ©s.
-[*] PossibilitÃ© d'ajouter le lien d'un fichier contenu dans la section upload
+[b]Téléchargement[/b]
+[*] Possibilité de signaler les liens cassés.
+[*] Possibilité d'ajouter le lien d'un fichier contenu dans la section upload
 
-[b]CompatibilitÃ© des thÃ¨mes 3.0 :[/b]
+[b]Compatibilité des thèmes 3.0 :[/b]
 [*] Ajout d'une variable js THEME dans header.tpl
 - Modification de la classe xmlhttprequest_preview (border-radius en plus).
-[*] Ajout d'une image images/form/justify.png dans les thÃ¨mes 
-- Changement mineurs dans bbcode.css (bloc masquables + balise wikipÃ©dia)
+[*] Ajout d'une image images/form/justify.png dans les thèmes 
+- Changement mineurs dans bbcode.css (bloc masquables + balise wikipédia)
 
 [b]Newsletter[/b]
 [*] Refonte du module en MVC.
-[*] Gestion des autorisations de crÃ©ation d'une newsletter.
-[*] Gestion des autorisations de lecture et de modÃ©ration de la liste des archives.
-[*] Gestion des autorisations de lecture et de modÃ©ration des inscrits.
-[*] Gestions de plusieurs newsletter (possibilitÃ© de s'abonner Ã  certaines ou Ã  toutes les newsletters).
-[*] PossibilitÃ© de gÃ©rer les autorisations de lecture et de modÃ©ration des inscrits, de crÃ©ation d'une newsletteret de modÃ©ration des archives par newsletter.
+[*] Gestion des autorisations de création d'une newsletter.
+[*] Gestion des autorisations de lecture et de modération de la liste des archives.
+[*] Gestion des autorisations de lecture et de modération des inscrits.
+[*] Gestions de plusieurs newsletter (possibilité de s'abonner à certaines ou à toutes les newsletters).
+[*] Possibilité de gérer les autorisations de lecture et de modération des inscrits, de création d'une newsletteret de modération des archives par newsletter.
 [*] Gestion des archives avec tries sur les types de newsletter.
-[*] Inscription aux newsletters dÃ¨s l'enregistrement/l'Ã©dition d'un membre
+[*] Inscription aux newsletters dès l'enregistrement/l'édition d'un membre
