[MAJ] Gestion des langues

--- a/lang/english/config.ini
+++ b/lang/english/config.ini
@@ -4,4 +4,5 @@ author_mail=crowkait@phpboost.com, ben.popeye@phpboost.com
 author_link=http://www.phpboost.com
 date=09/20/05
 compatibility=4.0
+version=4.0
 identifier=uk
