--- a/lang/french/config.ini
+++ b/lang/french/config.ini
@@ -4,4 +4,5 @@ author_mail=crowkait@phpboost.com, ben.popeye@phpboost.com
 author_link=http://www.phpboost.com
 date=20/09/05
 compatibility=4.0
+version=4.0
 identifier=fr
