--- a/changelog.txt
+++ b/changelog.txt
@@ -32,15 +32,8 @@
 [*] Nouveau système de changement de mot de passe en cas d'oubli.
 + Refonte de la classe session (Possibilité de joindre les sessions et l'espace membre à des systèmes d'authentification externes).
 [*] Refonte du système de notation : suppression des champs BDD sur tous les modules, système autonome.
-[*] Refonte du système de commentaire : 
-	- Refonte graphique
-	- Gestion de la pagination en AJAX
-	- Possibilité de noter un commentaire (+1 ou -1)
-	- Possibilité d'approuver les commentaires avant publication par un administration ou un modérateur.
-	- Ajout d'autorisations de lecture, de modération, d'ajout et de notation.
-[*] Refonte de la gestion des thèmes.
 [*] Refonte de la section membre.
-+ Amélioration de la fonction d'upgrade d'un module.
+[*] Amélioration de la fonction d'upgrade d'un module.
 
 [b]Menus :[/b]
 [*] [color=red]Nouveauté :[/color] Nouveau système de gestion des menus en drag'n drop.
@@ -54,8 +47,7 @@
 - [color=red]Nouveauté:[/color] Nouveau thème pour la distribution complete.
 [*] Possibilité de cacher/ouvrir dans la liste des modules, la description et les autorisations de lecture pour une meilleure lisibilité
 [*] Amélioration de l'interface de gestion des thèmes.
-[*] Possibilité de personnaliser son logo par thème et le favicon du site.
-[*] Possibilité de mettre plusieurs images de visualisation des thèmes avec effet LightBox.
+[*] Possibilité de personnaliser son logo par thème et le favicon du site ainsi que les fichiers CSS de chaque thème
 
 [b]Divers :[/b]
 [*] [color=red]Nouveauté:[/color] Possibilité d'utiliser un serveur smtp pour l'envoi de mails.
@@ -68,10 +60,17 @@
 [*] Possibilité de trier les membres par date de dernière connexion dans l'administration.
 [*] Ajout de l'attribut style à la balise image de façon à pouvoir fixer des propriétés comme largeur, hauteur et bordure.
 [*] Nouveau système de champs membres : Les champs peuvent être désactivé, modifier et l'ajout de type de champs supplémentaires ont été ajoutés.
-[*] Possibilité de gérer finement les autorisations des thèmes.
 [*] Possibilité de gérer finement les autorisations des commentaires.
 [*] Possibilité de gérer finement les autorisations de l'interface de fichier.
 [*] Possibilité de gérer finement les autorisations d'accès au site quand il est en maintenance.
+[*] Refonte de la gestion des thèmes : Possibilité de gérer finement les autorisations des langues, d'avoir plusieurs images pour présenter un thème avec effet LightBox
+[*] Refonte de la gestion des langues : Possibilité de gérer finement les autorisations des langues
+[*] Refonte du système de commentaire : 
+	- Refonte graphique
+	- Gestion de la pagination en AJAX
+	- Possibilité de noter un commentaire (+1 ou -1)
+	- Possibilité d'approuver les commentaires avant publication par un administration ou un modérateur.
+	- Ajout d'autorisations de lecture, de modération, d'ajout et de notation.
 
 =================================== Modules =====================================
 [b]BugTracker :[/b]
@@ -87,7 +86,7 @@
 [*] Refonte complète du module, collaboration des utilisateurs possible.
 
 [b]Articles :[/b]
-- Refonte complète du module, collaboration des utilisateurs possible.
++ Refonte complète du module, collaboration des utilisateurs possible.
 
 [b]ShoutBox :[/b]
 [*] Possibilité de gérer les autorisations d'écriture, de lecture et de modération
