--- a/todo.txt
+++ b/todo.txt
@@ -66,10 +66,10 @@
 ------------------------------------ MODULES -----------------------------------
 
 [b]En ligne[/b]
-- Refonte du module
++ Refonte du module
 
 [b]Tous[/b]
-- Réparer la fonctionnalité de période de validité d'une publication (news par exemple), en requêtant directement en fonction de la date courante
++ Réparer la fonctionnalité de période de validité d'une publication (news par exemple), en requêtant directement en fonction de la date courante
 - Intégration de l'ExtensionPoint HomePage dans les différents modules
 
 #################################################################################
