[FIX] Fin de r?paration de la fonctionnalit? de p?riode de validit? d'une publication

--- a/todo.txt
+++ b/todo.txt
@@ -69,7 +69,7 @@
 + Refonte du module
 
 [b]Tous[/b]
-+ Réparer la fonctionnalité de période de validité d'une publication (news par exemple), en requêtant directement en fonction de la date courante
+* Réparer la fonctionnalité de période de validité d'une publication (news par exemple), en requêtant directement en fonction de la date courante
 - Intégration de l'ExtensionPoint HomePage dans les différents modules
 
 #################################################################################
