--- a/changelog.txt
+++ b/changelog.txt
@@ -63,6 +63,7 @@
 [*] Possibilité de gérer finement les autorisations des commentaires.
 [*] Possibilité de gérer finement les autorisations de l'interface de fichier.
 [*] Possibilité de gérer finement les autorisations d'accès au site quand il est en maintenance.
+[*] Possibilité de définir une période de validité d'une publication (pour les articles, news, sondages et téléchargements)
 [*] Refonte de la gestion des thèmes : Possibilité de gérer finement les autorisations des langues, d'avoir plusieurs images pour présenter un thème avec effet LightBox
 [*] Refonte de la gestion des langues : Possibilité de gérer finement les autorisations des langues
 [*] Refonte du système de commentaire : 
