[MAJ] Images et description des menus et modules

--- a/LangsSwitcher/lang/english/desc.ini
+++ b/LangsSwitcher/lang/english/desc.ini
@@ -1,2 +1,2 @@
-name="Menu changement de langues"
-desc="Ce module vous laisse à disposition dans l'administration, un menu permettant de switcher entre vos langues."
+name="Menu language choice"
+desc="This module lets you provided in the administration, a menu to switch between your langs."
