--- a/LangsSwitcher/lang/french/desc.ini
+++ b/LangsSwitcher/lang/french/desc.ini
@@ -1,2 +1,2 @@
-name="Menu changement de langues"
+name="Menu choix de langue"
 desc="Ce module vous laisse à disposition dans l'administration, un menu permettant de switcher entre vos langues."
