--- a/ThemesSwitcher/lang/english/desc.ini
+++ b/ThemesSwitcher/lang/english/desc.ini
@@ -1,2 +1,2 @@
-name="Menu changement de thème"
-desc="Ce module vous laisse à disposition dans l'administration, un menu permettant de switcher entre vos thèmes."
+name="Change theme menu"
+desc="This module lets you provided in the administration, a menu to switch between your themes."
