--- a/changelog.txt
+++ b/changelog.txt
@@ -30,20 +30,17 @@
 [*] Ajout de la balise [feed] permettant d'inclure un flux RSS dans une mise en page
 [*] Nouveau système de champs membres permettant également à un développeur de créer son propre champ personnalisé à partir d'un module.
 [*] Nouveau système de changement de mot de passe en cas d'oubli.
-+ Refonte de la classe session (Possibilité de joindre les sessions et l'espace membre à des systèmes d'authentification externes).
 [*] Refonte du système de notation : suppression des champs BDD sur tous les modules, système autonome.
 [*] Refonte de la section membre.
 [*] Amélioration de la fonction d'upgrade d'un module.
 [*] [color=red]Nouveauté:[/color] Possibilité d'avoir la page d'accueil d'un module sur l'index du site
+[*] Possibilité de définir plusieurs menus dans les modules
 
 [b]Menus :[/b]
 [*] [color=red]Nouveauté :[/color] Nouveau système de gestion des menus en drag'n drop.
 [*] [color=red]Nouveauté:[/color] Possibilité d'afficher/masquer un menu sur un module ou une page donnée à l'aide de filtres.
-- [color=red]Nouveauté:[/color] Gestion des menus avec arborescence repliable
-- Possibilité de désactiver l'affichage d'un lien dans les menus
 
 [b]Personnalisation graphique :[/b]
-- [color=red]Nouveauté:[/color] Interface de personnalisation de la page de démarrage du site.
 [*] [color=red]Nouveauté:[/color] Possibilité de masquer indépendamment tous les conteneurs suivant les thèmes.
 - [color=red]Nouveauté:[/color] Nouveau thème pour la distribution complete.
 [*] Possibilité de cacher/ouvrir dans la liste des modules, la description et les autorisations de lecture pour une meilleure lisibilité
@@ -52,7 +49,6 @@
 
 [b]Divers :[/b]
 [*] [color=red]Nouveauté:[/color] Possibilité d'utiliser un serveur smtp pour l'envoi de mails.
-- [color=red]Nouveauté:[/color] Système d'alertes (javascript) utilisateur évolué.
 [*] Possibilité de spécifier le niveau d'accès pour voir la liste des membres.
 [*] Redimensionnement automatisé des avatars s'ils dépassent les dimensions maximales autorisées.
 [*] Meilleur détection des robots d'indexation, ajout de la prise en compte de Bing.
